Fix navbar on mobile

--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -58,7 +58,7 @@ h1:hover{
         flex-direction: row;
         padding: 20px;
         margin-top: 6rem;
-        width: 100vw;
+        width: 97vw;
         justify-content: space-between !important;
     }
 
